fixed series page

--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -44,4 +44,5 @@
 		<!-- end main post area -->
 	</div>
 </section>
+<script async src="{{asset "/dist/series.js"}}"></script>
 <!-- end site's main content area -->
