--- a/src/less/series.less
+++ b/src/less/series.less
@@ -3,4 +3,5 @@
 @import 'global/mixin.less';
 
 /* Series Styles */
-@import 'pages/series.less';
+@import 'series/series.less';
+@import 'pages/page.less';
