--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,8 +1,7 @@
 <!-- Start Scripts -->
-<script src="{{asset "/js/lazy-load.min.js"}}"></script>
 <script src="{{asset "js/includes/content-api.min.js"}}"></script>
 <script src="{{asset "js/includes/ghost-search.min.js"}}"></script>
-<script src="{{asset "/js/includes/retina.min.js"}}"></script>
+<script src="{{asset "js/includes/retina.min.js"}}"></script>
 <script async src="{{asset "dist/global.js"}}"></script>
 <noscript id="deferred-styles">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-6jHF7Z3XI3fF4XZixAuSu0gGKrXwoX/w3uFPxC56OtjChio7wtTGJWRW53Nhx6Ev" crossorigin="anonymous">
@@ -28,10 +27,10 @@ var lazyLoadInstance = new LazyLoad({
      else window.addEventListener('load', loadDeferredStyles);
    </script>
 {{#is "post"}}
-  <script async src="{{asset "/dist/posts.js"}}"></script>
+  <script async src="{{asset "dist/posts.js"}}"></script>
 {{/is}}
 {{^is "post,home"}}
-  <script async src="{{asset "/dist/pages.js"}}"></script>
+  <script async src="{{asset "dist/pages.js"}}"></script>
 {{/is}}
 {{#is "author"}}
     <script src="{{asset "js/includes/gh-profile-card.min.js"}}"></script>
