utilized contentFor helper

--- a/author.hbs
+++ b/author.hbs
@@ -16,4 +16,8 @@
 			<!-- end main post area -->
 	</div>
 </section>
+{{#contentFor "scripts"}}
+	<script src="{{asset "js/includes/gh-profile-card.min.js"}}"></script>
+	<script async src="{{asset "dist/author.js"}}"></script>
+{{/contentFor}}
 <!-- end sites main content area -->
