--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -1,7 +1,8 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
+
+{{#contentFor "series_page"}}gh-head-transparent{{/contentFor}}
 <!-- start site's main content area -->
-{{#page}}
 <section class="content-wrap archive">
 	<div class="container">
 			<!-- start main post area -->
@@ -45,6 +46,4 @@
 		<!-- end main post area -->
 	</div>
 </section>
-<script async src="{{asset "dist/series.js"}}"></script>
-{{/page}}
 <!-- end site's main content area -->
