--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -15,10 +15,14 @@
 
 /* Code */
 @import 'posts/code.less';
+@import 'posts/languages/default.less';
 @import 'posts/languages/shell.less';
 @import 'posts/languages/python.less';
 @import 'posts/languages/javascript.less';
 @import 'posts/languages/sql.less';
+@import 'posts/languages/json.less';
+@import 'posts/languages/config.less';
+@import 'posts/languages/markup.less';
 
 /* baquette box */
 @import 'posts/box.css';
