--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -10,56 +10,56 @@
       background: rgba(61, 74, 101, 0.6);
     }
 
-    .hljs-meta {
+    .meta {
       color: #c7a85d;
     }
 
-    .hljs-addition,
-    .hljs-meta-string,
-    .hljs-regexp,
-    .hljs-string {
+    .addition,
+    .meta-string,
+    .regexp,
+    .string {
       color: #93DCB8;
       font-weight: 100;
       font-family: 'Hack';
     }
 
-    .hljs-params {
+    .params {
       color: #ecb357 !important;
     }
 
-    .hljs-comment {
+    .comment {
       color: #737a8e !important;
     }
 
-    .hljs-attribute {
+    .attribute {
       color: #d8b061 !important;
     }
 
-    .hljs-class,
-    .hljs-title {
+    .class,
+    .title {
       color: #ffd712 !important;
       font-weight: 700;
       font-family: 'Hack';
     }
 
-    .hljs-attr,
-    .hljs-number,
-    .hljs-selector-attr,
-    .hljs-selector-pseudo,
-    .hljs-template-variable,
-    .hljs-type,
-    .hljs-variable {
+    .attr,
+    .number,
+    .selector-attr,
+    .selector-pseudo,
+    .template-variable,
+    .type,
+    .variable {
       color: #bc82d8 !important;
     }
 
-    .hljs-keyword {
+    .keyword {
       color: #00b1d5 !important;
       font-weight: 700;
       font-family: 'Hack';
     }
 
-    .hljs-function {
-      .hljs-keyword {
+    .function {
+      .keyword {
         color: #00b1d5 !important;
       }
     }
