--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -9,86 +9,85 @@
   .shell,
   .output,
   .endpoint,
-  .shell,
-  .hljs {
+  .shell {
     background: @nord0;
     color: white;
     font-weight: normal;
 
-    .hljs-title {
+    .title {
       color: @nord13;
       font-weight: normal;
     }
 
-    .hljs-name {
+    .name {
       color: @nord8;
     }
 
-    .hljs-tag {
+    .tag {
       color: @nord9;
     }
 
-    .hljs-attr {
+    .attr {
       color: @nord14;
       font-style: italic;
     }
 
-    .hljs-built_in,
-    .hljs-section,
-    .hljs-selector-tag {
+    .built_in,
+    .section,
+    .selector-tag {
       color: #cbbdff;
     }
 
-    .hljs-keyword {
+    .keyword {
       color: @nord9;
     }
 
-    .hljs-subst {
+    .subst {
       color: #e3dfff;
     }
 
-    .hljs-addition,
-    .hljs-bullet,
-    .hljs-code,
-    .hljs-deletion,
-    .hljs-quote,
-    .hljs-regexp,
-    .hljs-selector-attr,
-    .hljs-selector-class,
-    .hljs-selector-pseudo,
-    .hljs-string,
-    .hljs-symbol,
-    .hljs-template-tag {
+    .addition,
+    .bullet,
+    .code,
+    .deletion,
+    .quote,
+    .regexp,
+    .selector-attr,
+    .selector-class,
+    .selector-pseudo,
+    .string,
+    .symbol,
+    .template-tag {
       color: @nord8;
     }
 
-    .hljs-meta,
-    .hljs-meta-string {
+    .meta,
+    .meta-string {
       color: @nord9;
     }
 
-    .hljs-comment {
+    .comment {
       color: @nord12;
     }
 
-    .hljs-keyword,
-    .hljs-literal,
-    .hljs-name,
-    .hljs-selector-tag,
-    .hljs-strong {
+    .keyword,
+    .literal,
+    .name,
+    .selector-tag,
+    .strong {
       font-weight: normal;
     }
 
-    .hljs-literal,
-    .hljs-number {
+    .literal,
+    .number {
       color: @nord15;
     }
 
-    .hljs-emphasis {
+    .emphasis {
       font-style: italic;
     }
 
-    .hljs-strong {
+    .strong {
       font-weight: bold;
     }
   }
@@ -104,7 +103,7 @@
   .hljs.shell,
   .language-bash,
   .language-shell {
-    .hljs-built_in {
+    .built_in {
       color: @nord12 !important;
     }
 
