--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -22,72 +22,72 @@
       color: #c5c8c6 !important;
     }
     /*color: fg_yellow*/
-    .hljs-name,
-    .hljs-title {
+    .name,
+    .title {
       color: #f0c674;
     }
     /*color: fg_comment*/
-    .hljs-comment,
-    .hljs-keyword,
-    .hljs-meta {
+    .comment,
+    .keyword,
+    .meta {
       color: #707880;
     }
     /*color: fg_red*/
-    .hljs-deletion,
-    .hljs-link,
-    .hljs-literal,
-    .hljs-number,
-    .hljs-symbol {
+    .deletion,
+    .link,
+    .literal,
+    .number,
+    .symbol {
       color: #4ac0fa;
     }
     /*color: fg_green*/
-    .hljs-addition,
-    .hljs-doctag,
-    .hljs-regexp,
-    .hljs-selector-attr,
-    .hljs-selector-pseudo,
-    .hljs-string {
+    .addition,
+    .doctag,
+    .regexp,
+    .selector-attr,
+    .selector-pseudo,
+    .string {
       color: #b0def0;
       font-weight: 400;
       font-family: 'Hack';
     }
     /*color: fg_purple*/
-    .hljs-attribute,
-    .hljs-code,
-    .hljs-selector-id {
+    .attribute,
+    .code,
+    .selector-id {
       color: #b294bb;
     }
     /*color: fg_blue*/
-    .hljs-bullet,
-    .hljs-keyword,
-    .hljs-selector-tag,
-    .hljs-tag {
+    .bullet,
+    .keyword,
+    .selector-tag,
+    .tag {
       color: #79bbf3;
       font-weight: 700;
       font-family: 'Hack';
     }
     /*color: fg_aqua*/
-    .hljs-subst,
-    .hljs-template-tag,
-    .hljs-template-variable,
-    .hljs-variable {
+    .subst,
+    .template-tag,
+    .template-variable,
+    .variable {
       color: #8abeb7;
     }
     /*color: fg_orange*/
-    .hljs-built_in,
-    .hljs-builtin-name,
-    .hljs-quote,
-    .hljs-section,
-    .hljs-selector-class,
-    .hljs-type {
+    .built_in,
+    .builtin-name,
+    .quote,
+    .section,
+    .selector-class,
+    .type {
       color: #ffe3a2;
     }
 
-    .hljs-emphasis {
+    .emphasis {
       font-style: italic;
     }
 
-    .hljs-strong {
+    .strong {
       font-weight: bold;
     }
 
