--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,9 +1,10 @@
 #seriesposts {
   margin: 0 60px 30px;
-  padding: 35px 20px 10px;
+  padding: 20px 20px 10px;
   display: none;
   position: relative;
   overflow: hidden;
+      background: #eceff3;
 
   @media(max-width: 800px) {
     margin: 0 35px 30px;
@@ -13,20 +14,16 @@
   }
 
   h5 {
-    padding-bottom: 0;
     font-size: 1.2em;
     color: #597d87 !important;
     font-family: 'ProductSans-Regular', serif;
     font-weight: 600;
     letter-spacing: 1px;
     margin-bottom: 15px;
-    padding: 14px 12px;
+    padding: 0;
     width: -webkit-fill-available;
     width: -moz-fill-available;
     margin-top: 0;
-    position: absolute;
-    left: 0;
-    top: 0;
     line-height: 1;
     height: fit-content;
   }
@@ -36,7 +33,7 @@
     margin-top: 0;
     margin-bottom: 10px;
     margin-left: 0;
-    padding-left: 20px;
+    padding-left: 30px;
     @media(max-width: 600px) {
       margin: 15px 2px 10px;
     }
