hljs being fickle

--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -1,182 +1,182 @@
-.post-content {
+.hljs-post-content {
 
-  .hljs.css,
-  .hljs.ini,
-  .hljs.vim,
-  .hljs.yaml,
-  .language-css,
-  .language-ini,
-  .language-toml,
-  .language-vim,
-  .language-xml,
-  .language-yaml {
+  .hljs.hljs-css,
+  .hljs.hljs-ini,
+  .hljs.hljs-vim,
+  .hljs.hljs-yaml,
+  .hljs-language-css,
+  .hljs-language-ini,
+  .hljs-language-toml,
+  .hljs-language-vim,
+  .hljs-language-xml,
+  .hljs-language-yaml {
     background: #2E3440;
 
     &::before {
       color: white;
       @media(max-width: 600px) {
-        font-size: 1.2em !important;
+        font-size: 12em !important;
       }
     }
 
-    .subst {
+    .hljs-subst {
       color: #D8DEE9;
     }
 
-    .selector-tag {
+    .hljs-selector-tag {
       color: #81A1C1;
     }
 
-    .selector-id {
+    .hljs-selector-id {
       color: #8FBCBB;
       font-weight: bold;
     }
 
-    .selector-class {
+    .hljs-selector-class {
       color: #8FBCBB;
     }
 
-    .selector-attr {
+    .hljs-selector-attr {
       color: #8FBCBB;
     }
 
-    .selector-pseudo {
+    .hljs-selector-pseudo {
       color: #88C0D0;
     }
 
-    .addition {
+    .hljs-addition {
       background-color: rgba(163,190,140,0.5);
     }
 
-    .deletion {
+    .hljs-deletion {
       background-color: rgba(191,97,106,0.5);
     }
 
-    .built_in,
-    .type {
+    .hljs-built_in,
+    .hljs-type {
       color: #8FBCBB;
     }
 
-    .class {
+    .hljs-class {
       color: #8FBCBB;
     }
 
-    .function {
+    .hljs-function {
       color: #88C0D0;
     }
 
-    .function > .title {
+    .hljs-function > .hljs-title {
       color: #88C0D0;
     }
 
-    .keyword,
-    .literal,
-    .symbol {
+    .hljs-keyword,
+    .hljs-literal,
+    .hljs-symbol {
       color: #81A1C1;
     }
 
-    .number {
+    .hljs-number {
       color: #B48EAD;
     }
 
-    .regexp {
+    .hljs-regexp {
       color: #EBCB8B;
     }
 
-    .string {
+    .hljs-string {
       color: #A3BE8C;
       font-weight: 400;
       font-family: 'Hack';
     }
 
-    .title {
+    .hljs-title {
       color: #8FBCBB;
     }
 
-    .params {
+    .hljs-params {
       color: #D8DEE9;
     }
 
-    .bullet {
+    .hljs-bullet {
       color: #81A1C1;
     }
 
-    .code {
+    .hljs-code {
       color: #8FBCBB;
     }
 
-    .emphasis {
+    .hljs-emphasis {
       font-style: italic;
     }
 
-    .formula {
+    .hljs-formula {
       color: #8FBCBB;
     }
 
-    .strong {
+    .hljs-strong {
       font-weight: bold;
     }
 
-    .link:hover {
+    .hljs-link:hover {
       text-decoration: underline;
     }
 
-    .quote {
+    .hljs-quote {
       color: #4C566A;
     }
 
-    .comment {
+    .hljs-comment {
       color: #4C566A;
     }
 
-    .doctag {
+    .hljs-doctag {
       color: #8FBCBB;
     }
 
-    .meta,
-    .meta-keyword {
+    .hljs-meta,
+    .hljs-meta-keyword {
       color: #5E81AC;
     }
 
-    .meta-string {
+    .hljs-meta-string {
       color: #A3BE8C;
       font-weight: 400;
       font-family: 'Hack';
     }
 
-    .attr {
+    .hljs-attr {
       color: #8FBCBB;
     }
 
-    .attribute {
+    .hljs-attribute {
       color: #D8DEE9;
     }
 
-    .builtin-name {
+    .hljs-builtin-name {
       color: #81A1C1;
     }
 
-    .name {
+    .hljs-name {
       color: #81A1C1;
     }
 
-    .section {
+    .hljs-section {
       color: #88C0D0;
     }
 
-    .tag {
+    .hljs-tag {
       color: #81A1C1;
     }
 
-    .variable {
+    .hljs-variable {
       color: #D8DEE9;
     }
 
-    .template-variable {
+    .hljs-template-variable {
       color: #D8DEE9;
     }
 
-    .template-tag {
+    .hljs-template-tag {
       color: #5E81AC;
     }
   }
