--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -9,97 +9,97 @@
       background: #435643;
     }
 
-    .inserted {
+    .hljs-inserted {
       border-bottom: 1px dotted #f0fff0;
       text-decoration: none;
     }
 
-    .bold,
-    .important {
+    .hljs-bold,
+    .hljs-important {
       font-weight: bold;
     }
 
-    .important {
+    .hljs-important {
       color: #b3d6b3;
     }
 
-    .entity {
+    .hljs-entity {
       cursor: help;
     }
 
-    .highlight {
+    .hljs-highlight {
       outline: 0.4em solid #5c705c;
       outline-offset: 0.4em;
     }
 
-    .cdata,
-    .doctype,
-    .prolog {
+    .hljs-cdata,
+    .hljs-doctype,
+    .hljs-prolog {
       color: #535f53;
     }
 
-    .comment {
+    .hljs-comment {
       color: #7f8ba7;
       opacity: 0.6;
     }
 
-    .built_in {
+    .hljs-built_in {
       font-weight: 700;
       color: #79ddfb;
     }
 
-    .punctuation {
+    .hljs-punctuation {
       color: #535f53;
     }
 
-    .namespace {
+    .hljs-namespace {
       opacity: 0.7;
     }
 
-    .number,
-    .operator,
-    .tag {
+    .hljs-number,
+    .hljs-operator,
+    .hljs-tag {
       color: #f7f23f;
     }
 
-    .property {
+    .hljs-property {
       color: #687d68;
     }
 
-    .atrule-id,
-    .selector,
-    .tag-id {
+    .hljs-atrule-id,
+    .hljs-selector,
+    .hljs-tag-id {
       color: #f0fff0;
     }
 
-    .attr-name {
+    .hljs-attr-name {
       color: #b3d6b3;
     }
 
-    .function > .keyword {
+    .hljs-function > .hljs-keyword {
       color: #78ddfa;
       font-weight: 700;
     }
 
-    .function > .title {
+    .hljs-function > .hljs-title {
       color: #d08888;
     }
 
-    .params {
+    .hljs-params {
       color: #fbb579;
     }
 
-    .keyword {
+    .hljs-keyword {
       color: #a4a0ff;
     }
 
-    .string {
+    .hljs-string {
       color: #daf7fd;
       font-weight: 400;
       font-family: 'Hack';
     }
 
-    .attr {
+    .hljs-attr {
       color: #a39fff;
     }
 
