--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -14,73 +14,73 @@
     color: #c5cddc;
     background: #282c34;
 
-    .comment,
-    .quote {
+    .hljs-comment,
+    .hljs-quote {
       color: #5c6370;
       font-style: italic;
     }
 
-    .doctag,
-    .formula,
-    .keyword {
+    .hljs-doctag,
+    .hljs-formula,
+    .hljs-keyword {
       color: #c678dd;
     }
 
 
-    .deletion,
-    .name,
-    .section,
-    .selector-tag,
-    .subst {
+    .hljs-deletion,
+    .hljs-name,
+    .hljs-section,
+    .hljs-selector-tag,
+    .hljs-subst {
       color: #e06c75;
     }
 
-    .literal {
+    .hljs-literal {
       color: #56b6c2;
     }
 
-    .addition,
-    .attribute,
-    .meta-string,
-    .regexp,
-    .string {
+    .hljs-addition,
+    .hljs-attribute,
+    .hljs-meta-string,
+    .hljs-regexp,
+    .hljs-string {
       color: #acdacf;
     }
 
-    .built_in,
-    .class .title {
+    .hljs-built_in,
+    .hljs-class .hljs-title {
       color: #e6c07b;
     }
 
-    .attr,
-    .number,
-    .selector-attr,
-    .selector-class,
-    .selector-pseudo,
-    .template-variable,
-    .type,
-    .variable {
+    .hljs-attr,
+    .hljs-number,
+    .hljs-selector-attr,
+    .hljs-selector-class,
+    .hljs-selector-pseudo,
+    .hljs-template-variable,
+    .hljs-type,
+    .hljs-variable {
       color: #dbbd8b;
     }
 
-    .bullet,
-    .link,
-    .meta,
-    .selector-id,
-    .symbol,
-    .title {
+    .hljs-bullet,
+    .hljs-link,
+    .hljs-meta,
+    .hljs-selector-id,
+    .hljs-symbol,
+    .hljs-title {
       color: #61aeee;
     }
 
-    .emphasis {
+    .hljs-emphasis {
       font-style: italic;
     }
 
-    .strong {
+    .hljs-strong {
       font-weight: bold;
     }
 
-    .link {
+    .hljs-link {
       text-decoration: underline;
     }
   }
@@ -88,7 +88,7 @@
 
 .handlebars,
 .language-handlebars{
-  .template-variable{
+  .hljs-template-variable{
     color: #88c8fb;
   }
 
