--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -10,56 +10,56 @@
       background: rgba(61, 74, 101, 0.6);
     }
 
-    .meta {
+    .hljs-meta {
       color: #c7a85d;
     }
 
-    .addition,
-    .meta-string,
-    .regexp,
-    .string {
+    .hljs-addition,
+    .hljs-meta-string,
+    .hljs-regexp,
+    .hljs-string {
       color: #93DCB8;
       font-weight: 100;
       font-family: 'Hack';
     }
 
-    .params {
+    .hljs-params {
       color: #ecb357 !important;
     }
 
-    .comment {
+    .hljs-comment {
       color: #737a8e !important;
     }
 
-    .attribute {
+    .hljs-attribute {
       color: #d8b061 !important;
     }
 
-    .class,
-    .title {
+    .hljs-class,
+    .hljs-title {
       color: #ffd712 !important;
       font-weight: 700;
       font-family: 'Hack';
     }
 
-    .attr,
-    .number,
-    .selector-attr,
-    .selector-pseudo,
-    .template-variable,
-    .type,
-    .variable {
+    .hljs-attr,
+    .hljs-number,
+    .hljs-selector-attr,
+    .hljs-selector-pseudo,
+    .hljs-template-variable,
+    .hljs-type,
+    .hljs-variable {
       color: #bc82d8 !important;
     }
 
-    .keyword {
+    .hljs-keyword {
       color: #00b1d5 !important;
       font-weight: 700;
       font-family: 'Hack';
     }
 
-    .function {
-      .keyword {
+    .hljs-function {
+      .hljs-keyword {
         color: #00b1d5 !important;
       }
     }
