--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -5,83 +5,83 @@
     background: #3b314f;
     color: #a8d1df;
 
-    .attr {
+    .hljs-attr {
       color: #e471a6 !important;
       font-weight: 700;
       font-family: 'Hack';
     }
 
-    .string {
+    .hljs-string {
       color: #c39dea;
     }
 
-    .comment,
-    .quote {
+    .hljs-comment,
+    .hljs-quote {
       color: #5c6370;
       font-style: italic;
     }
 
-    .doctag,
-    .formula,
-    .keyword {
+    .hljs-doctag,
+    .hljs-formula,
+    .hljs-keyword {
       color: #c678dd;
     }
 
-    .deletion,
-    .name,
-    .section,
-    .selector-tag,
-    .subst {
+    .hljs-deletion,
+    .hljs-name,
+    .hljs-section,
+    .hljs-selector-tag,
+    .hljs-subst {
       color: #e06c75;
     }
 
-    .literal {
+    .hljs-literal {
       color: #56b6c2;
     }
 
-    .addition,
-    .attribute,
-    .meta-string,
-    .regexp,
-    .string {
+    .hljs-addition,
+    .hljs-attribute,
+    .hljs-meta-string,
+    .hljs-regexp,
+    .hljs-string {
       color: #c39dea !important;
     }
 
-    .built_in,
-    .class,
-    .title {
+    .hljs-built_in,
+    .hljs-class,
+    .hljs-title {
       color: #e6c07b;
     }
 
-    .attr,
-    .number,
-    .selector-attr,
-    .selector-class,
-    .selector-pseudo,
-    .template-variable,
-    .type,
-    .variable {
+    .hljs-attr,
+    .hljs-number,
+    .hljs-selector-attr,
+    .hljs-selector-class,
+    .hljs-selector-pseudo,
+    .hljs-template-variable,
+    .hljs-type,
+    .hljs-variable {
       color: #73b97c;
     }
 
-    .bullet,
-    .link,
-    .meta,
-    .selector-id,
-    .symbol,
-    .title {
+    .hljs-bullet,
+    .hljs-link,
+    .hljs-meta,
+    .hljs-selector-id,
+    .hljs-symbol,
+    .hljs-title {
       color: #61aeee;
     }
 
-    .emphasis {
+    .hljs-emphasis {
       font-style: italic;
     }
 
-    .strong {
+    .hljs-strong {
       font-weight: bold;
     }
 
-    .link {
+    .hljs-link {
       text-decoration: underline;
     }
 
