--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -22,72 +22,72 @@
       color: #c5c8c6 !important;
     }
     /*color: fg_yellow*/
-    .name,
-    .title {
+    .hljs-name,
+    .hljs-title {
       color: #f0c674;
     }
     /*color: fg_comment*/
-    .comment,
-    .keyword,
-    .meta {
+    .hljs-comment,
+    .hljs-keyword,
+    .hljs-meta {
       color: #707880;
     }
     /*color: fg_red*/
-    .deletion,
-    .link,
-    .literal,
-    .number,
-    .symbol {
+    .hljs-deletion,
+    .hljs-link,
+    .hljs-literal,
+    .hljs-number,
+    .hljs-symbol {
       color: #4ac0fa;
     }
     /*color: fg_green*/
-    .addition,
-    .doctag,
-    .regexp,
-    .selector-attr,
-    .selector-pseudo,
-    .string {
+    .hljs-addition,
+    .hljs-doctag,
+    .hljs-regexp,
+    .hljs-selector-attr,
+    .hljs-selector-pseudo,
+    .hljs-string {
       color: #b0def0;
       font-weight: 400;
       font-family: 'Hack';
     }
     /*color: fg_purple*/
-    .attribute,
-    .code,
-    .selector-id {
+    .hljs-attribute,
+    .hljs-code,
+    .hljs-selector-id {
       color: #b294bb;
     }
     /*color: fg_blue*/
-    .bullet,
-    .keyword,
-    .selector-tag,
-    .tag {
+    .hljs-bullet,
+    .hljs-keyword,
+    .hljs-selector-tag,
+    .hljs-tag {
       color: #79bbf3;
       font-weight: 700;
       font-family: 'Hack';
     }
     /*color: fg_aqua*/
-    .subst,
-    .template-tag,
-    .template-variable,
-    .variable {
+    .hljs-subst,
+    .hljs-template-tag,
+    .hljs-template-variable,
+    .hljs-variable {
       color: #8abeb7;
     }
     /*color: fg_orange*/
-    .built_in,
-    .builtin-name,
-    .quote,
-    .section,
-    .selector-class,
-    .type {
+    .hljs-built_in,
+    .hljs-builtin-name,
+    .hljs-quote,
+    .hljs-section,
+    .hljs-selector-class,
+    .hljs-type {
       color: #ffe3a2;
     }
 
-    .emphasis {
+    .hljs-emphasis {
       font-style: italic;
     }
 
-    .strong {
+    .hljs-strong {
       font-weight: bold;
     }
 
