--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -2,7 +2,7 @@
   .json,
   .language-json {
     line-height: 1.4 !important;
-    background: #3b314f;
+    background: #2d253d;
     color: #a8d1df;
 
     .hljs-attr {
