--- a/partials/widget-twitter.hbs
+++ b/partials/widget-twitter.hbs
@@ -2,7 +2,7 @@
   <div class="widget" style="order:10">
   	<div class="twitter">
   		<h4 class="title">Twitter</h4>
-        <iframe src="https://feed.mikle.com/widget/v2/96903/" height="754px" width="100%" class="fw-iframe" frameborder="0"></iframe>
+      <iframe src="https://feed.mikle.com/widget/v2/96903/" height="814px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
       </div>
   </div>
  <!-- end feedwind code -->
