--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -109,7 +109,7 @@
 		width: -moz-fill-available !important;
 		border-bottom: 1px solid rgba(255, 255, 255, 0.16862745098039217);
 		padding-bottom: 20px !important;
-	  margin: 10px 0 20px;
+	  margin: 0 0 20px;
 	}
 
 	.logo {
@@ -152,7 +152,7 @@
 			mix-blend-mode: hard-light;
 
 			@media(max-width: 600px) {
-				 font-size: 30px;
+				 font-size: 25px;
 			}
 		}
 
@@ -236,5 +236,5 @@
 		color: white;
 		font-size: 0.8em;
 		font-family: 'TTNormsPro-Light';
-		padding: 10px;
+		padding: 15px 0;
 	}
