--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -135,9 +135,9 @@ header {
 			font-size: 2em;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.5em;
+			font-size: 1.65em;
 			max-width: auto;
-			margin: 25px;
+			margin: 25px 10px;
 			width: -webkit-fill-available;
 			letter-spacing: 0;
 			font-weight: 600;
