--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -12,7 +12,10 @@
           <h1>{{{title}}}</h1>
           {{#if feature_image}}
             <div class="featured-media">
-              <img src="{{img_url feature_image size="l"}}" alt="{{{title}}}" data-rjs="2">
+            <picture>
+              <source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
+              <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
+            </picture>
             </div>
           {{/if}}
           <div class="page-content">
