--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -27,8 +27,8 @@
 										<a href="/series/{{slug}}" title="{{name}}">
 											<div class="img-wrapper">
 												<picture>
-									        <source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="m"}} 1x, {{img_url feature_image size="m"}} 2x">
-									        <img alt="{{title}}" class="lazy" data-src="{{img_url feature_image}}">
+									        <source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
+									        <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
 									    </picture>
 											</div>
 											<div class="description">
