--- a/post.hbs
+++ b/post.hbs
@@ -13,9 +13,9 @@
 					{{#if feature_image}}
 						<div class="featured-media">
 							<picture>
-								<source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="l"}} 1x, {{img_url feature_image size="xl"}} 2x">
-								<source media="(min-width: 600px)" data-srcset="{{img_url feature_image size="m"}} 1x, {{img_url feature_image size="m"}} 2x">
-								<img alt="{{title}}" class="lazy" data-src="{{img_url feature_image}}">
+								<source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
+								<source media="(min-width: 600px)" data-srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
+								<img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
 							</picture>
 						</div>
 					{{/if}}
@@ -41,8 +41,8 @@
 									<a href="{{url}}" class="meta-item author mobile"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
 								{{/unless}}
 								{{#if profile_image}}
-									<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url profile_image absolute="true" size="xs"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{name}}</span></a>
-									<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url profile_image absolute="true" size="xs"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{slug}}</span></a>
+									<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url profile_image absolute="true" size="extrasmall"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{name}}</span></a>
+									<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url profile_image absolute="true" size="extrasmall"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{slug}}</span></a>
 								{{/if}}
 							{{/primary_author}}
 							<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
