new graphql series

--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -351,6 +351,10 @@
 				&.mapping-data-with-mapbox {
 					background: @mapbox-color;
 				}
+
+				&.graphql-hype {
+					background: @graphql-color;
+				}
 			}
 		}
 
@@ -410,6 +414,11 @@
 
 		.adventures-in-excel svg {
 			color: @excel-color;
+		}
+
+		.graphql-hype svg {
+				color: @graphql-color;
+				fill: @graphql-color;
 		}
 
 		.the-rise-of-google-cloud i {
