--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -45,6 +45,7 @@
 @excel-color: #74a184;
 @sql-color: #435c9e;
 @mapbox-color: #4264fb;
+@graphql-color: #E10098;
 
 
 @shadow-color: 0 0 5px rgba(65, 67, 144, 0.15);
