--- a/src/less/global.less
+++ b/src/less/global.less
@@ -3,8 +3,8 @@
 @import 'global/mixin.less';
 @import 'global/global.less';
 @import 'global/footer.less';
-@import 'global/menu.less';
 @import 'global/fonts.less';
+@import 'global/nav.less';
 @import 'global/widgets.less';
 @import 'global/pagination.less';
 @import 'global/tags.less';
