--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -21,6 +21,7 @@
 		text-transform: uppercase;
 		letter-spacing: 2px;
 		line-height: 1;
+		margin-bottom: 25px;
 		@media(max-width: 800px) {
 			margin: 10px 0 10px !important;
 		}
@@ -62,6 +63,8 @@
 				text-align: left;
 				transition: all 0.3s ease-out;
 				font-family: 'TTNormsPro-Light';
+				font-size: 0.93em;
+				margin-bottom: 2px;
 
 				* {
 					&:hover {
@@ -72,7 +75,6 @@
 
 				a {
 					color: #fff;
-					font-size: 0.9em;
 					font-family: 'TTNormsPro-Light';
 				}
 			}
@@ -133,7 +135,7 @@
 		width: 100%;
 		font-family: 'TTNormsPro-Light';
 		font-weight: 100;
-		font-size: 0.9em;
+		font-size: 0.95em;
 		line-height: 1.6;
 		margin: 15px 0 25px;
 
@@ -211,9 +213,7 @@
 =====================================================*/
 	.widget.contributors {
 		 margin-top: 10px;
-		.footer-title {
-			margin: 0;
-		}
+
 		@media(max-width: 800px) {
 			display: none;
 		}
@@ -231,7 +231,7 @@
 
 	.copyright {
 		width: 100%;
-		background: #0c1626;
+		background: #080e18;
 		text-align: center;
 		color: white;
 		font-size: 0.8em;
