--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -582,7 +582,7 @@
 			margin-top: 13px;
 
 			a {
-				margin: 0 !important;
+				margin: 0 0 5px !important;
 				color: #455f6f;
 			}
 
@@ -637,6 +637,7 @@
 				&:last-child {
 					margin-bottom: 0;
 					border-bottom: 0;
+					padding-bottom: 0;
 				}
 			}
 		}
