--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,4 +1,4 @@
-<header>
+<nav>
   <div class="banner">
     <div class="search form-group">
     	<i class="far fa-search"></i><input id="my-custom-input" class="icon" placeholder="Search all posts" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search all posts'">
@@ -12,7 +12,7 @@
   		<a class="branding" href="{{@site.url}}">{{@site.title}}</a>
   	{{/if}}
   </div>
-  <nav class="navigation">
+  <div class="navigation">
   		{{navigation}}
-  </nav>
-</header>
+  </div>
+</nav>
