--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,5 +1,5 @@
 <!-- start sidebar -->
-<div class="sidebar">
+<aside class="sidebar">
 	{{#is "home,paged"}}
 		{{> widget-text}}
 	{{/is}}
@@ -24,5 +24,5 @@
 	{{#is "home,author"}}
 		{{> widget-twitter}}
 	{{/is}}
-</div>
+</aside>
 <!-- end sidebar -->
