--- a/post.hbs
+++ b/post.hbs
@@ -1,12 +1,12 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
-<section class="content-wrap">
-	<div class="container">
-		{{#post}}
-			<!-- start main post area -->
-			<div class=" main-content">
-				<article class="{{post_class}}">
+<div class="container">
+	{{#post}}
+		<!-- start main post area -->
+		<article class="{{post_class}}">
+			<div class="post-wrapper">
+				<header>
 					<h1 class="post-title">{{{title}}}</h1>
 					<h4 class="excerpt">{{excerpt}}</h4>
 					<!-- start responsive image -->
@@ -21,70 +21,63 @@
 					{{/if}}
 					<!-- end responsive image -->
 
-					{{!--	{{#primary_tag}}
-							{{#if feature_image}}
-								{{#get "posts" filter="primary_tag:" include="count.posts" order="published_at desc" }}
-									{{count.posts}}
-								{{/get}}
-							{{/if}}
-						{{/primary_tag}}--}}
-
 					<!-- start post metadata -->
-					<div class="post-head">
-						<div class="post-meta">
-							{{#primary_tag}}
-								<span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span>
-							{{/primary_tag}}
-							{{#primary_author}}
-								{{#unless profile_image}}
-									<a href="{{url}}" class="meta-item author desktop"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
-									<a href="{{url}}" class="meta-item author mobile"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
-								{{/unless}}
-								{{#if profile_image}}
-									<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url profile_image absolute="true" size="extrasmall"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{name}}</span></a>
-									<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url profile_image absolute="true" size="extrasmall"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{slug}}</span></a>
-								{{/if}}
-							{{/primary_author}}
-							<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
-							<span class="readtime meta-item"><i class="fal fa-eye"></i> <span>{{reading_time}}</span></span>
-						</div>
+					<div class="post-meta">
+						{{#primary_tag}}
+							<span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span>
+						{{/primary_tag}}
+						{{#primary_author}}
+							{{#unless profile_image}}
+								<a href="{{url}}" class="meta-item author desktop"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
+								<a href="{{url}}" class="meta-item author mobile"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
+							{{/unless}}
+							{{#if profile_image}}
+								<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url profile_image absolute="true" size="extrasmall"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{name}}</span></a>
+								<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url profile_image absolute="true" size="extrasmall"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{slug}}</span></a>
+							{{/if}}
+						{{/primary_author}}
+						<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
+						<span class="readtime meta-item"><i class="fal fa-eye"></i> <span>{{reading_time}}</span></span>
 					</div>
-					<!-- end post metadata -->
+				</header>
+				<!-- end post metadata -->
 
-					{{> postseries}}
+				{{> postseries}}
 
-					<!-- blurb describing roundup posts -->
-					{{#has tag="Roundup"}}
-						<div class="post-roundup-blurb">
-							<i class="fal fa-flask"></i>
-							<p>Resident Scientist Snkia works tirelessly towards robot utopia. These are his findings.</p>
-						</div>
-					{{/has}}
-					<!-- end blurb -->
+				<!-- blurb describing roundup posts -->
+				{{#has tag="Roundup"}}
+					<div class="post-roundup-blurb">
+						<i class="fal fa-flask"></i>
+						<p>Resident Scientist Snkia works tirelessly towards robot utopia. These are his findings.</p>
+					</div>
+				{{/has}}
+				<!-- end blurb -->
 
-					<!-- start content -->
-					<div class="post-content">
+				<!-- start content -->
+				<div class="post-content">
+					<main>
 						{{content}}
-						<footer class="post-footer">
-							<div class="tag-list">
-								{{#if tags}}
-									{{tags separator=""}}
-								{{/if}}
-							</div>
-							<div class="share">
-								{{> share_links}}
-							</div>
-						</footer>
-					</div>
-					<!-- end content -->
-				</article>
+					</main>
+					<section class="post-footer">
+						<div class="tag-list">
+							{{#if tags}}
+								{{tags separator=""}}
+							{{/if}}
+						</div>
+						<div class="share">
+							{{> share_links}}
+						</div>
+				</div>
+
+				<!-- end content -->
 			</div>
-			<!-- end main post area -->
-			{{> postfooter}}
-	</div>
-</section>
+			</section>
+		</article>
+		<!-- end main post area -->
+		{{> postfooter}}
+</div>
 {{#contentFor "scripts"}}
-  <script async src="{{asset "dist/posts.js"}}"></script>
+	<script async src="{{asset "dist/posts.js"}}"></script>
 	{{#has tag="Roundup"}}
 		<script src="{{asset "/js/previews.js"}}"></script>
 	{{/has}}
