--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -6,7 +6,7 @@
 		main post area
 	====================================================*/
 
-header {
+nav {
 	margin-bottom: 1px;
 }
 
@@ -25,22 +25,17 @@ header {
 		display: block;
 	}
 
-	.main-content {
-		width: 100% !important;
-		 background: white;
-	}
 
-	.post-content {
-		margin: 10px 60px 30px;
-		overflow-x: visible;
-		clear: both;
 
-		@media(max-width: 800px) {
-			margin: 10px 40px 30px;
-		}
+	.post-wrapper {
+		margin: 0 auto;
+    width: 100%;
+    max-width: 790px;
+
+
 
 		@media(max-width: 600px) {
-			margin: 5px 25px 30px;
+			margin: 5px 0 30px;
 		}
 
 		a {
@@ -86,8 +81,7 @@ header {
 		article {
 			margin: 0 auto;
 			width: 100%;
-			max-width: 850px;
-
+			background: white;
 
 			@media(max-width: 800px) {
 				margin: 0;
@@ -95,19 +89,18 @@ header {
 			}
 			@media(max-width: 600px) {
 				margin-bottom: 20px;
-				max-width: 100%;
 				overflow: hidden;
 			}
 		}
 
 		.featured-media {
 			line-height: 1;
-			margin: 20px 60px 0;
+			margin: 20px 0 0;
 			@media(max-width: 800px) {
-				margin: 20px 40px 0;
+				margin: 20px 0 0;
 			}
 			@media (max-width: 600px) {
-				margin: 20px 20px 0;
+				margin: 20px 0 0;
 			}
 
 			img {
@@ -121,7 +114,7 @@ header {
 	.post-title {
 		text-align: left;
 		width: -webkit-fill-available;
-		margin: 30px 60px 5px;
+		margin: 30px 0 5px;
 		display: block;
 		font-family: 'ProductSans-Bold', 'TTNormsPro-Medium' !important;
 		font-size: 2.2em;
@@ -131,13 +124,13 @@ header {
 		text-align: left;
 		color: @h1-color;
 		@media(max-width: 800px) {
-			margin: 30px 40px 10px;
+			margin: 30px 0 10px;
 			font-size: 2em;
 		}
 		@media(max-width: 600px) {
 			font-size: 1.65em;
 			max-width: auto;
-			margin: 25px 10px;
+			margin: 25px 0;
 			width: -webkit-fill-available;
 			letter-spacing: 0;
 			font-weight: 600;
@@ -158,12 +151,12 @@ header {
 	.excerpt {
 		font-weight: 400;
 		font-size: 1.25em;
-		margin: 10px 60px 30px;
+		margin: 10px 0 30px;
 		line-height: 1.3;
 		color: @h1-color;
 		font-family: 'TTNormsPro-Medium';
 		@media(max-width: 800px) {
-			margin: 10px 40px 0;
+			margin: 10px 0 0;
 		}
 		@media(max-width: 600px) {
 			display: none;
@@ -226,8 +219,7 @@ header {
 		}
 	}
 
-	.main-header,
-	.main-navigation,
+
 	.sidebar {
 		display: none;
 	}
@@ -259,26 +251,17 @@ header {
 	padding: 0;
 }
 
-.main-content {
+article {
 	width: 100% !important;
 	padding: 0 !important;
 	box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
 
-	.post-head {
+	header {
 		padding: 10px 0 15px;
-		margin: 0 60px;
-		@media(max-width: 900px) {
-			margin: 0 60px;
-		}
-		@media(max-width: 800px) {
-			margin: 0 35px !important;
-		}
-		@media(max-width: 600px) {
-			margin: 0 25px !important;
-		}
+		margin: 0;
 
 		.post-meta {
-			margin: 0;
+			margin: 10px 0;
 			color: #40627b;
 			font-size: 12px;
 			display: flex;
@@ -447,7 +430,7 @@ header {
 	overflow: hidden;
 	order: 1;
 
-	.post-content {
+	.post-wrapper {
 		position: relative;
 
 	ol,
