--- a/src/less/series/series.less
+++ b/src/less/series/series.less
@@ -19,8 +19,6 @@
   .sorted-series {
     display: flex;
     flex-direction: column;
-    background: white;
-    box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
   }
 
   .descending {
@@ -30,6 +28,8 @@
   .series-article-preview {
     position: relative;
     background: white;
+    box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+    margin-bottom: 10px;
     max-width: -webkit-fill-available;
     @media(max-width:800px) {
       height: fit-content;
@@ -76,18 +76,21 @@
     padding: 12px 12px;
     align-items: center;
     justify-content: flex-end;
+    transition: all .3s ease-out;
+
+    &:hover {
+      cursor: pointer;
+      background: @hover-color;
+
+      * {
+        color: white;
+      }
+    }
 
     .sort {
       float: right;
       line-height: 1;
-
-      &:hover {
-        cursor: pointer;
-
-        * {
-          color: @hover-color;
-        }
-      }
+      font-size: 18px;
 
       .desc {
         display: none;
@@ -134,7 +137,7 @@
     }
 
     .post-count {
-      margin: 0 0 3px;
+      margin: 0 0 5px;
       font-family: 'ProductSans-Regular', serif;
       font-weight: 100;
       color: #407393;
@@ -149,9 +152,9 @@
 
     .details {
       width: -webkit-fill-available;
-      padding: 0 20px;
+      padding: 10px 20px 0;
       position: relative;
-      max-height: 125px;
+      max-height: 115px;
       @media(max-width: 800px) {
         max-width: -webkit-fill-available;
         padding: 0 0 0 15px;
