series post widget tweaks

--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -32,7 +32,7 @@
     .hljs-section,
     .hljs-selector-tag,
     .hljs-subst {
-      color: #e06c75;
+      color: #ed77f3;
     }
 
     .hljs-literal {
@@ -44,7 +44,7 @@
     .hljs-meta-string,
     .hljs-regexp,
     .hljs-string {
-      color: #acdacf;
+      color: #7bd4ff;
     }
 
     .hljs-built_in,
@@ -60,7 +60,7 @@
     .hljs-template-variable,
     .hljs-type,
     .hljs-variable {
-      color: #dbbd8b;
+      color: #f2c77f;
     }
 
     .hljs-bullet,
