--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -25,8 +25,6 @@ nav {
 		display: block;
 	}
 
-
-
 	.post-wrapper {
 		margin: 0 auto;
     width: 100%;
@@ -449,7 +447,7 @@ article {
 			font-style: normal;
 			font-variant: normal;
 			text-rendering: auto;
-			margin: 15px 0 15px 10px;
+			margin: 0 0 10px 0;
 			padding-left: 0;
 			line-height: 1.7;
 			display: block;
