series post widget tweaks

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -109,7 +109,7 @@
 	@media(max-width: 600px) {
 		width: -webkit-fill-available !important;
 		width: -moz-fill-available !important;
-		border-bottom: 1px solid rgba(255, 255, 255, 0.16862745098039217);
+		border-bottom: 1px solid rgba(229, 246, 255, 0.27);
 		padding-bottom: 20px !important;
 	  margin: 0 0 20px;
 	}
@@ -234,7 +234,7 @@
 		background: #080e18;
 		text-align: center;
 		color: white;
-		font-size: 0.8em;
+		font-size: 0.85em;
 		font-family: 'TTNormsPro-Light';
 		padding: 15px 0;
 	}
