--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -299,10 +299,6 @@ nav {
         transform: scale(1);
         font-weight: 500;
         transition: all 0.15s ease-out;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
 
         &:hover {
           color: @theme-color;
@@ -992,6 +988,7 @@ nav {
       li {
         position: relative;
         height: 25px;
+            width: fit-content;
       }
 
       a {
