series post widget tweaks

--- a/partials/postfooter.hbs
+++ b/partials/postfooter.hbs
@@ -1,5 +1,5 @@
 <!-- start postfooter -->
-<section>
+<section class="after-post">
   {{> nextprev}}
   {{> about-author}}
   {{#foreach authors include="count.posts"}}
