--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -20,7 +20,7 @@
   padding: 10px 40px;
   background: 0 0;
   border-top: 0;
-  margin: 30px 60px 60px;
+  margin: 30px 0 60px;
   width: auto;
   display: flex;
   justify-content: left;
