series post widget tweaks

--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -124,7 +124,7 @@
       .post-permalink {
         position: absolute;
         bottom: 0;
-        width: -webkit-fill-available;
+        width: 100%;
         padding: 10px 0 0;
 
         .meta {
