series post widget tweaks

--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -49,8 +49,9 @@
       width: -webkit-fill-available;
       width: -moz-webkit-fill-available;
       padding: 5px 40px;
-      margin-left: calc(-50vw + 50%) !important;
-      margin-right: calc(-50vw + 50%) !important;
+      margin-left: unset !important;
+      margin-right: unset !important;
+      width: 100%;
       margin: 0 auto;
     }
   }
