--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -30,10 +30,13 @@ nav {
     width: 100%;
     max-width: 790px;
 
-
+		@media(max-width: 800px) {
+			width: 90%;
+			margin: 0 auto;
+		}
 
 		@media(max-width: 600px) {
-			margin: 5px 0 30px;
+			margin: 5px auto 30px;
 		}
 
 		a {
@@ -122,13 +125,13 @@ nav {
 		text-align: left;
 		color: @h1-color;
 		@media(max-width: 800px) {
-			margin: 30px 0 10px;
+			margin: 10px 0 10px;
 			font-size: 2em;
 		}
 		@media(max-width: 600px) {
 			font-size: 1.65em;
 			max-width: auto;
-			margin: 25px 0;
+			margin: 0 0 25px;
 			width: -webkit-fill-available;
 			letter-spacing: 0;
 			font-weight: 600;
@@ -257,6 +260,11 @@ article {
 	header {
 		padding: 10px 0 15px;
 		margin: 0;
+		box-shadow: unset !important;
+
+		@media(max-width: 600px) {
+			padding: 10px 0 0;
+		}
 
 		.post-meta {
 			margin: 10px 0;
@@ -270,7 +278,7 @@ article {
 				padding: 0;
 				max-width: none;
 				width: auto;
-				margin: 0 2px;
+				margin: 15px 0 20px;
 				padding-top: 0;
 				justify-content: space-between;
 			}
