--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -31,12 +31,12 @@
   background: #ecf1ec;
   border-radius: 5px;
   @media(max-width: 800px) {
-    margin: 30px 35px 60px;
+    margin: 30px 0 60px;
     justify-content: space-between;
   }
   @media(max-width: 600px) {
     padding: 15px 20px;
-    margin: 25px 30px 30px;
+    margin: 25px 0 30px;
     width: auto;
   }
 
