firefox related style bugs

--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -114,7 +114,7 @@
 
   .devops {
     color: #495f6d !important;
-    background-color: lighten(#495f6d, 60%);
+    background-color: #e0e7ef;
 
     * {
       color: #495f6d !important;
