--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -5,7 +5,6 @@
   overflow-x: hidden;
   overflow-wrap: break-word;
   margin: 0;
-  font-weight: 200;
   line-height: 1.7;
   padding: 0 25px 20px;
   white-space: pre-wrap !important;
@@ -27,8 +26,7 @@
     -webkit-font-smoothing: antialiased;
     display: block;
     position: absolute;
-    width: -webkit-fill-available;
-    width: -moz-fill-available;
+    width: 100%;
     height: auto;
     mix-blend-mode: color-dodge;
     padding: 6px 25px;
