--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -258,7 +258,7 @@ article {
 	box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
 
 	header {
-		padding: 10px 0 15px;
+		padding: 10px 0;
 		margin: 0;
 		box-shadow: unset !important;
 
@@ -267,7 +267,7 @@ article {
 		}
 
 		.post-meta {
-			margin: 10px 0;
+			margin: 15px 0;
 			color: #40627b;
 			font-size: 12px;
 			display: flex;
